revisi swagger trip
